--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,6 +75,7 @@
       }
      }
     ],
+    "react/function-component-definition": ["error", { "namedComponents": "arrow-function" }],
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "react/jsx-indent": "off",
     "react/jsx-indent-props": "off",
