--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "react-icons": "^4.3.1",
   "scheduler": "^0.20.2",
   "styled-components": "^5.3.3",
+  "tau-prolog": "^0.3.1",
   "use-context-selector": "^1.3.9",
   "yup": "^0.32.11"
  },
